Implement component customization, remove unused files and packages, prepate package

--- a/package.json
+++ b/package.json
@@ -15,33 +15,10 @@
   "author": "Yelysei Lukin",
   "license": "ISC",
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.19",
-    "@fortawesome/free-solid-svg-icons": "^5.9.0",
-    "@fortawesome/react-fontawesome": "^0.1.4",
-    "axios": "^0.19.0",
-    "classnames": "^2.2.6",
-    "compass-mixins": "^0.12.10",
-    "immutable": "^4.0.0-rc.12",
-    "jquery": "^3.4.1",
-    "js-yaml": "^3.13.1",
-    "lodash": "^4.17.11",
-    "moment": "^2.24.0",
-    "normalize.css": "^8.0.1",
-    "prop-types": "^15.7.2",
-    "prop-types-exact": "^1.2.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-helmet": "^5.2.1",
-    "react-modal": "^3.8.1",
-    "react-redux": "^7.1.0",
-    "react-router": "^5.0.1",
-    "react-router-dom": "^5.0.1",
-    "redux": "^4.0.1",
-    "redux-actions": "^2.6.5",
-    "redux-devtools-extension": "^2.13.8",
-    "redux-saga": "^1.0.3",
-    "regenerator-runtime": "^0.13.2",
-    "reselect": "^4.0.0"
+    "prop-types": "^15.7.2",
+    "classnames": "^2.2.6"
   },
   "devDependencies": {
     "@babel/core": "^7.4.5",
@@ -66,7 +43,6 @@
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^4.0.0",
     "html-webpack-plugin": "^3.2.0",
-    "husky": "^2.5.0",
     "json-loader": "^0.5.7",
     "node-sass": "^4.12.0",
     "react-svg-loader": "^3.0.3",
