Change package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-files-dnd",
+  "name": "@yelysei/react-files-dnd",
   "version": "1.0.1",
   "description": "",
   "main": "index.js",
