--- a/.babelrc
+++ b/.babelrc
@@ -1,18 +1,5 @@
 {
   "presets": [
-    "@babel/preset-react",
-    "@babel/preset-env"
-  ],
-  "plugins": [
-    [
-      "@babel/plugin-proposal-decorators",
-      {
-        "legacy": true
-      }
-    ],
-    "@babel/plugin-proposal-class-properties",
-    "@babel/plugin-proposal-export-default-from",
-    "@babel/plugin-proposal-optional-chaining",
-    "@babel/plugin-transform-react-jsx-source"
+    "@babel/preset-react"
   ]
 }
