--- a/package.json
+++ b/package.json
@@ -1,62 +1,61 @@
 {
   "name": "@yelysei/react-files-dnd",
-  "version": "1.1.1",
+  "version": "0.0.2",
   "description": "",
-  "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server",
-    "build": "webpack"
+    "build": "tsc",
+    "lint": "tslint -p tsconfig.json",
+    "test": "jest --config jestconfig.json"
   },
   "repository": {
     "type": "git",
     "url": "git@github.com:YelyseiLukin/files-drag-and-drop.git"
   },
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
+  "files": [
+    "lib/**/*"
+  ],
   "publishConfig": {
     "access": "public"
   },
-  "author": "Yelysei Lukin",
+  "keywords": [
+    "react",
+    "reactjs",
+    "react-component",
+    "javascript",
+    "drag-and-drop",
+    "dnd",
+    "drag",
+    "drop",
+    "file",
+    "file field",
+    "draggable",
+    "droppable",
+    "droparea",
+    "dropzone"
+  ],
+  "homepage": "https://github.com/YelyseiLukin/react-files-dnd#readme",
+  "author": "Yelysei Lukin <ylukin277@gmail.com>",
   "license": "MIT",
   "dependencies": {
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "prop-types": "^15.7.2",
     "classnames": "^2.2.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.4.5",
-    "@babel/plugin-proposal-class-properties": "^7.4.4",
-    "@babel/plugin-proposal-decorators": "^7.4.4",
-    "@babel/plugin-proposal-export-default-from": "^7.2.0",
-    "@babel/plugin-proposal-optional-chaining": "^7.2.0",
-    "@babel/plugin-transform-react-jsx-source": "^7.2.0",
-    "@babel/preset-env": "^7.4.5",
-    "@babel/preset-react": "^7.0.0",
-    "babel-eslint": "^10.0.2",
-    "babel-loader": "^8.0.6",
-    "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^5.0.3",
-    "css-loader": "^3.0.0",
-    "eslint": "^5.16.0",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-loader": "^2.1.2",
-    "eslint-plugin-import": "^2.17.3",
-    "eslint-plugin-jsx-a11y": "^6.2.1",
-    "eslint-plugin-react": "^7.13.0",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
-    "file-loader": "^4.0.0",
-    "html-webpack-plugin": "^3.2.0",
-    "json-loader": "^0.5.7",
-    "node-sass": "^4.12.0",
-    "react-svg-loader": "^3.0.3",
-    "sass-loader": "^7.1.0",
-    "style-loader": "^0.23.1",
-    "stylelint": "^10.1.0",
-    "stylelint-config-airbnb": "0.0.0",
-    "stylelint-order": "^3.0.0",
-    "stylelint-scss": "^3.8.0",
-    "stylelint-webpack-plugin": "^0.10.5",
-    "webpack": "^4.35.0",
-    "webpack-cli": "^3.3.4",
-    "webpack-dev-server": "^3.7.2"
+    "@babel/core": "^7.8.3",
+    "@babel/preset-react": "^7.8.3",
+    "@types/classnames": "^2.2.9",
+    "@types/jest": "^25.1.0",
+    "@types/node-sass": "^4.11.0",
+    "@types/react": "^16.9.19",
+    "jest": "^25.1.0",
+    "node-sass": "^4.13.1",
+    "react-test-renderer": "^16.12.0",
+    "ts-jest": "^25.0.0",
+    "tslint": "^6.0.0",
+    "tslint-config-airbnb": "^5.11.2",
+    "typescript": "^3.7.5"
   }
 }
